src/assets/style/modal.css
.modal-overlay {
  position: fixed;
  z-index: -1;
  top: 0;
  right: 0;
  width: 100%;
  height: 100%;
  display: flex;
  justify-content: center;
  margin: 0 auto;
  background-color: var(--mainBgModal);
  visibility: hidden;
  opacity: 0;
  transition: var(--mainTransition);
}

.show-modal {
  visibility: visible;
  opacity: 1;
  z-index: 2;
}

.modal-container {
  position: relative;
  display: flex;
  flex-direction: column;
  width: 90vw;
  height: 90vh;
  min-width: 360px;
  padding: 4%;
  transform: translateY(2%);
  background-color: var(--mainWhite);
  border-radius: var(--mainBorderRadius);
  box-shadow: 0px 10px 40px #41434450;
  transition: var(--mainTransition);
  color: var(--mainBlack);
  font-family: var(--monserrat);
}

.modal-container button {
  align-self: flex-end;
  border: none;
  font-size: 1.5rem;
  width: 2.5rem;
  height: 2.5rem;
  padding: 0.5rem 0 0;
  border-radius: var(--mainBorderRadius);
  cursor: pointer;
}

.modal_text-container {
  position: relative;
  height: 100%;
  overflow: scroll;
  background-color: var(--primaryColor50);
  border-radius: var(--mainBorderRadius);
  padding: 1% 3%;
}

h1.modal-title {
  font-family: var(--monserratAlt);
  font-size: 26px;
  text-transform: capitalize;
  margin: 1.2rem 0 0.8rem;
}

.response-container ul {
  list-style-type: none;
}

.response-container li:nth-child(odd) {
  background-color: var(--primaryColor);
  margin: 2.5% 0 0.5%;
  text-transform: capitalize;
  color: var(--mainWhite);
}

.response-container li:nth-child(even) {
  font-weight: 700;
  text-transform: capitalize;
}

.response-container li:nth-child(8) {
  font-weight: 700;
  text-transform: none;
}

/*XS – smartphone port. and small tablet port.-land. and medium tablet land.*/
@media all and (min-width: 360px) {
  .modal-container {
    min-width: initial;
  }
}

/*XS - smartphones land. (height:100%)*/
@media all and (min-width: 480px) and (max-height: 600px) {
}

/*MD – large tablet port. and medium tablet land.*/
@media all and (min-width: 992px) and (min-height: 800px) {
  .modal-container {
    transform: translateY(15%);
    width: 50vw;
    height: fit-content;
    padding: 1%;
  }

  .modal_text-container {
    height: auto;
    overflow: unset;
  }
}

/*LG - large tablet landscape*/
@media all and (min-width: 1200px) {
  .modal-container {
    height: fit-content;
  }

  .modal_text-container {
    padding: 1% unset;
  }

  .response-container li:nth-child(odd) {
    margin: 1.2% 0 0.3%;
  }
}

/*XL larger screens*/
@media all and (min-width: 1440px) {
  .modal-container {
    transform: translateY(5%);
    max-width: 900px;
  }
}

